[metadata]
name = tabula-py
description = Simple wrapper for tabula-java, read tables from PDF into DataFrame
author = Aki Ariga
author_email = chezou@gmail.com
maintainer = Aki Ariga
maintainer_email = chezou@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
url = https://github.com/chezou/tabula-py
classifiers =
    Development Status :: 5 - Production/Stable
    Topic :: Text Processing :: General
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
keywords =
    data frame
    pdf
    table

[options]
packages = find:
include_package_data = True
python_requires = >=3.5
install_requires =
    pandas >= 0.25.3
    numpy
    distro
setup_requires =
    setuptools_scm

[options.extras_require]
dev =
    pytest
    flake8
    black
    isort
test =
    pytest
doc =
    sphinx
    sphinx_rtd_theme

[flake8]
ignore = E203, W503
max-line-length = 88
exclude =
    .git,
    __pycache__,
    build,
    dist,
    .venv,
    tabula/__init__.py

[isort]
line_length = 88
multi_line_output = 3
include_trailing_comma = True
known_third_party = nox,numpy,pandas,pkg_resources,setuptools,sphinx_rtd_theme
